// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Getting Cube queries [Function getCampaignEventsOrdersPerformanceData] should call load 1`] = `
[
  {
    "dimensions": [
      "CampaignOrderEvents.campaignId",
    ],
    "filters": [
      {
        "member": "CampaignOrderEvents.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
    ],
    "measures": [
      "CampaignOrderEvents.engagement",
      "CampaignOrderEvents.totalConversionRate",
      "CampaignOrderEvents.campaignCTR",
    ],
    "metricName": "convert-campaign-events-orders-performance",
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries [Function getCampaignEventsPerformanceData] should call load 1`] = `
[
  {
    "dimensions": [
      "CampaignEvents.campaignId",
    ],
    "filters": [
      {
        "member": "CampaignEvents.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "CampaignEvents.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "CampaignEvents.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
    ],
    "measures": [
      "CampaignEvents.impressions",
      "CampaignEvents.firstCampaignDisplay",
      "CampaignEvents.lastCampaignDisplay",
      "CampaignEvents.clicks",
      "CampaignEvents.clicksRate",
      "CampaignEvents.ticketsCreated",
    ],
    "metricName": "convert-campaign-events-performance",
    "segments": [
      "CampaignEvents.campaignEventsOnly",
    ],
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries [Function getCampaignEventsTotalsData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "CampaignOrderEvents.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "CampaignOrderEvents.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "CampaignOrderEvents.impressions",
      "CampaignOrderEvents.engagement",
    ],
    "metricName": "convert-campaign-events-totals",
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries [Function getCampaignOrderPerformanceData] should call load 1`] = `
[
  {
    "dimensions": [
      "OrderConversion.campaignId",
    ],
    "filters": [
      {
        "member": "OrderConversion.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
    ],
    "measures": [
      "OrderConversion.campaignSales",
      "OrderConversion.ticketSales",
      "OrderConversion.ticketSalesCount",
      "OrderConversion.discountSales",
      "OrderConversion.discountSalesCount",
      "OrderConversion.clickSales",
      "OrderConversion.clickSalesCount",
      "OrderConversion.campaignSalesCount",
    ],
    "metricName": "convert-campaign-order-performance",
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries [Function getCampaignOrderTotalsData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "OrderConversion.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "OrderConversion.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "OrderConversion.campaignSales",
      "OrderConversion.campaignSalesCount",
    ],
    "metricName": "convert-campaign-order-totals",
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries [Function getCampaignsPerformanceGraphData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "CampaignOrderEvents.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "CampaignOrderEvents.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "CampaignOrderEvents.campaignCTR",
      "CampaignOrderEvents.totalConversionRate",
    ],
    "metricName": "convert-campaigns-performance-graph",
    "order": [
      [
        "CampaignOrderEvents.createdDatetime",
        "asc",
      ],
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2023-01-01T20:00:00.000",
          "2023-03-15T06:00:00.000",
        ],
        "dimension": "CampaignOrderEvents.createdDatetime",
        "granularity": "day",
      },
    ],
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries [Function getRevenueGraphData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "OrderConversion.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "OrderConversion.gmv",
    ],
    "metricName": "convert-revenue-graph",
    "order": [
      [
        "OrderConversion.createdDatetime",
        "asc",
      ],
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2023-01-01T20:00:00.000",
          "2023-03-15T06:00:00.000",
        ],
        "dimension": "OrderConversion.createdDatetime",
        "granularity": "day",
      },
    ],
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries [Function getRevenueShareGraphData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "OrderConversion.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.campaignId",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "OrderConversion.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "OrderConversion.campaignSales",
    ],
    "metricName": "convert-revenue-share-graph",
    "order": [
      [
        "OrderConversion.createdDatetime",
        "asc",
      ],
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2023-01-01T20:00:00.000",
          "2023-03-15T06:00:00.000",
        ],
        "dimension": "OrderConversion.createdDatetime",
        "granularity": "day",
      },
    ],
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries [Function getStoreRevenueTotalData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "OrderConversion.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "OrderConversion.gmv",
    ],
    "metricName": "convert-store-revenue-total",
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries for with notEquals [Function getCampaignEventsOrdersPerformanceData] should call load 1`] = `
[
  {
    "dimensions": [
      "CampaignOrderEvents.campaignId",
    ],
    "filters": [
      {
        "member": "CampaignOrderEvents.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.campaignId",
        "operator": "notEquals",
        "values": [
          "1",
          "2",
        ],
      },
    ],
    "measures": [
      "CampaignOrderEvents.engagement",
      "CampaignOrderEvents.totalConversionRate",
      "CampaignOrderEvents.campaignCTR",
    ],
    "metricName": "convert-campaign-events-orders-performance",
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries for with notEquals [Function getCampaignEventsPerformanceData] should call load 1`] = `
[
  {
    "dimensions": [
      "CampaignEvents.campaignId",
    ],
    "filters": [
      {
        "member": "CampaignEvents.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "CampaignEvents.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "CampaignEvents.campaignId",
        "operator": "notEquals",
        "values": [
          "1",
          "2",
        ],
      },
    ],
    "measures": [
      "CampaignEvents.impressions",
      "CampaignEvents.firstCampaignDisplay",
      "CampaignEvents.lastCampaignDisplay",
      "CampaignEvents.clicks",
      "CampaignEvents.clicksRate",
      "CampaignEvents.ticketsCreated",
    ],
    "metricName": "convert-campaign-events-performance",
    "segments": [
      "CampaignEvents.campaignEventsOnly",
    ],
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries for with notEquals [Function getCampaignEventsTotalsData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "CampaignOrderEvents.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.campaignId",
        "operator": "notEquals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "CampaignOrderEvents.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "CampaignOrderEvents.impressions",
      "CampaignOrderEvents.engagement",
    ],
    "metricName": "convert-campaign-events-totals",
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries for with notEquals [Function getCampaignOrderPerformanceData] should call load 1`] = `
[
  {
    "dimensions": [
      "OrderConversion.campaignId",
    ],
    "filters": [
      {
        "member": "OrderConversion.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.campaignId",
        "operator": "notEquals",
        "values": [
          "1",
          "2",
        ],
      },
    ],
    "measures": [
      "OrderConversion.campaignSales",
      "OrderConversion.ticketSales",
      "OrderConversion.ticketSalesCount",
      "OrderConversion.discountSales",
      "OrderConversion.discountSalesCount",
      "OrderConversion.clickSales",
      "OrderConversion.clickSalesCount",
      "OrderConversion.campaignSalesCount",
    ],
    "metricName": "convert-campaign-order-performance",
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries for with notEquals [Function getCampaignOrderTotalsData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "OrderConversion.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.campaignId",
        "operator": "notEquals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "OrderConversion.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "OrderConversion.campaignSales",
      "OrderConversion.campaignSalesCount",
    ],
    "metricName": "convert-campaign-order-totals",
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries for with notEquals [Function getCampaignsPerformanceGraphData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "CampaignOrderEvents.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "CampaignOrderEvents.campaignId",
        "operator": "notEquals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "CampaignOrderEvents.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "CampaignOrderEvents.campaignCTR",
      "CampaignOrderEvents.totalConversionRate",
    ],
    "metricName": "convert-campaigns-performance-graph",
    "order": [
      [
        "CampaignOrderEvents.createdDatetime",
        "asc",
      ],
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2023-01-01T20:00:00.000",
          "2023-03-15T06:00:00.000",
        ],
        "dimension": "CampaignOrderEvents.createdDatetime",
        "granularity": "day",
      },
    ],
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries for with notEquals [Function getRevenueGraphData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "OrderConversion.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "OrderConversion.gmv",
    ],
    "metricName": "convert-revenue-graph",
    "order": [
      [
        "OrderConversion.createdDatetime",
        "asc",
      ],
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2023-01-01T20:00:00.000",
          "2023-03-15T06:00:00.000",
        ],
        "dimension": "OrderConversion.createdDatetime",
        "granularity": "day",
      },
    ],
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries for with notEquals [Function getRevenueShareGraphData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "OrderConversion.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.campaignId",
        "operator": "notEquals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "OrderConversion.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "OrderConversion.campaignSales",
    ],
    "metricName": "convert-revenue-share-graph",
    "order": [
      [
        "OrderConversion.createdDatetime",
        "asc",
      ],
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2023-01-01T20:00:00.000",
          "2023-03-15T06:00:00.000",
        ],
        "dimension": "OrderConversion.createdDatetime",
        "granularity": "day",
      },
    ],
    "timezone": "America/San_Francisco",
  },
]
`;

exports[`Getting Cube queries for with notEquals [Function getStoreRevenueTotalData] should call load 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "OrderConversion.periodStart",
        "operator": "afterDate",
        "values": [
          "2023-01-01T20:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2023-03-15T06:00:00.000",
        ],
      },
      {
        "member": "OrderConversion.shopName",
        "operator": "equals",
        "values": [
          "punched-tires-shop",
        ],
      },
    ],
    "measures": [
      "OrderConversion.gmv",
    ],
    "metricName": "convert-store-revenue-total",
    "timezone": "America/San_Francisco",
  },
]
`;
